<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:background="@color/card_background">

    <LinearLayout
        android:id="@+id/LoginField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="30dp">

        <EditText
            android:id="@+id/EmailField"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:hint="@string/email_field"
            android:layout_marginTop="10dp"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/PasswordField"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:hint="@string/password_field"
            android:inputType="textPassword"
            android:layout_marginTop="10dp"/>



        <com.dd.CircularProgressButton
            android:id="@+id/LoginButton"
            android:layout_width="196dp"
            android:layout_height="64dp"
            android:textColor="@color/white"
            android:textSize="35dp"
            app:cpb_iconComplete="@drawable/ic_action_accept"
            app:cpb_iconError="@drawable/ic_action_cancel"
            app:cpb_textIdle="@string/login_button"
            android:layout_marginTop="30dp"/>
    </LinearLayout>

    <com.nvanbenschoten.motion.ParallaxImageView
        android:id="@+id/LogoImage"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="70dp"
        android:src="@drawable/geach"/>
</RelativeLayout>