<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.semoncat.geach.teacher.ui.HackyViewPager
        android:id="@+id/PPTViewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageButton
        android:id="@+id/PPT_Prev"
        android:layout_width="70dp"
        android:layout_height="match_parent"
        android:background="@null"
        android:src="@drawable/ic_chevron_left"
        android:scaleType="fitCenter"
        android:layout_gravity="left|center"
        android:contentDescription="@string/PPT_Prev_Des" />

    <ImageButton
        android:id="@+id/PPT_Next"
        android:layout_width="70dp"
        android:layout_height="match_parent"
        android:background="@null"
        android:src="@drawable/ic_chevron_right"
        android:scaleType="fitCenter"
        android:layout_gravity="right|center"
        android:contentDescription="@string/PPT_Next_Des" />


    <FrameLayout
        android:id="@+id/PPTPreviewContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:background="@color/ppt_preview_container_background">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="bottom|center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/toggleToPPT"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:textSize="30dp"
                    android:text="@string/PPT_String"
                    android:textColor="@color/ppt_video_tab"
                    android:background="@null" />

                <Button
                    android:id="@+id/toggleToVideo"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:textSize="30dp"
                    android:text="@string/Video_String"
                    android:textColor="@color/ppt_video_tab"
                    android:background="@null" />
            </LinearLayout>

            <android.support.v7.widget.CardView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipChildren="false">

                <it.sephiroth.android.library.widget.HListView
                    android:id="@+id/PPTPreview"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_margin="10dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp" />

                <FrameLayout
                    android:id="@+id/VideoListContainer"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_margin="10dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp">

                    <it.sephiroth.android.library.widget.HListView
                        android:id="@+id/VideoList"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:listSelector="?android:attr/selectableItemBackground" />

                    <TextView
                        android:id="@+id/VideoListEmptyView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/VideoList_Empty"
                        android:textSize="30dp"
                        android:visibility="gone"
                        android:layout_gravity="center" />
                </FrameLayout>


            </android.support.v7.widget.CardView>
        </LinearLayout>
    </FrameLayout>

    <com.melnykov.fab.FloatingActionButton
        android:id="@+id/ActionMenuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="32dp"
        android:src="@drawable/ic_menu"
        app:fab_colorNormal="@color/menu_button_normal"
        app:fab_colorPressed="@color/menu_button_pressed" />
</FrameLayout>

